--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
   <div id='test'></div>
   <div class="footer">&lt;&nbsp;Designed <i class="fa fa-paint-brush" aria-hidden="true"></i> by <span>W.Alsabbouh /&gt;</span></div>
 </div>
+<script src="javaScript.js"></script>
