--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<div class="container">
-  <div class="header"></div>
-  <div id='test'></div>
-  <div class="footer">&lt;&nbsp;Designed <i class="fa fa-paint-brush" aria-hidden="true"></i> by <span>W.Alsabbouh /&gt;</span></div>
-</div>
-<script src="javaScript.js"></script>
+
+<html>
+  <head>
+  <link href="style.css" rel="stylesheet">  
+  </head>
+<body>
+  <div class="container">
+    <div class="header"></div>
+    <div id='test'></div>
+    <div class="footer">&lt;&nbsp;Designed <i class="fa fa-paint-brush" aria-hidden="true"></i> by <span>W.Alsabbouh /&gt;</span></div>
+  </div>
+  <script src="javaScript.js"></script>
+</body>
+</html>
